# GSH-V2-deploy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  check_schema.py  docker-compose.yml  pyproject.toml  subscription_manager.py  subscription_manager_documentation.md
docs/superpowers/plans/: 2026-04-18-gsh-design-tokens.md  2026-04-19-gsh-v250.md  2026-04-19-gsh-v260.md
docs/superpowers/specs/: 2026-04-18-gsh-design-tokens.md  2026-04-19-gsh-v250-design.md  2026-04-19-gsh-v260-design.md
scripts/: deploy.sh
web/: README.md
web/backend/: Dockerfile  auth.py  auth_router.py  config.py  daily_summary.py  database.py  heartbeat.py  jwt_auth.py  main.py  models.py  notify.py  requirements.txt  risk.py
web/backend/routers/: dashboard.py  notifications.py  payments.py  risk.py  subscribers.py  telegram.py
web/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx
web/frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  StatCard.tsx  StatusBadge.tsx
web/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
web/frontend/src/lib/: ThemeContext.tsx  ToastContext.tsx  api.ts  auth.ts  constants.ts  utils.ts
web/frontend/src/pages/: BulkUpdate.tsx  Dashboard.tsx  Login.tsx  Payments.tsx  Risk.tsx  Settings.tsx  SubscriberDetail.tsx  Subscribers.tsx
web/frontend/src/styles/: operator.css
